# mpi_autoproc

./: .gitignore  README.md  pyproject.toml
mpi_autoproc/: __main__.py  config.ini.example  db_proc.py  log_collector.py
